--- a/packages/lorem-ipsum/package.json
+++ b/packages/lorem-ipsum/package.json
@@ -3,5 +3,8 @@
   "version": "0.1.3",
   "main": "index.js",
   "license": "MIT",
-  "gitHead": "c5cf94f4e412c9c4b8752930c51c34c40a27b113"
+  "gitHead": "e7a2f7aba927392ba0d0bc24473a9e2419ee175f",
+  "publishConfig": {
+    "access": "public"
+  }
 }
