--- a/example/package.json
+++ b/example/package.json
@@ -6,6 +6,7 @@
     "start": "display-hello"
   },
   "dependencies": {
-    "@display-hello/core": "^0.1.5"
+    "@display-hello/core": "^0.1.6",
+    "@display-hello/lorem-ipsum": "^0.1.5"
   }
 }
