--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "node index.js"
   },
+  "dependencies": {},
   "gitHead": "1dad02b6c773d3c9e1cd7ab751f32e3e66fbce48",
   "publishConfig": {
     "access": "public"
