--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@display-hello/core": "^1.0.0",
-    "@display-hello/translate-ptbr": "^0.1.5"
+    "@display-hello/lorem-ipsum": "^1.1.0",
+    "@display-hello/translate-ptbr": "^1.1.0"
   }
 }
